service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  annotations:
spec:
  selector: 
    app: nginx
  type: LoadBalancer  
  ports:
    - port: 80
      targetPort: 80
